[package]
name = "csv2html"
version = "3.0.1"
authors = ["D. Bohdan <dbohdan@dbohdan.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/dbohdan/csv2html"
homepage = "https://github.com/dbohdan/csv2html"
description = "Convert CSV files to HTML tables"
keywords = ["csv"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"
csv = "1.1"
exitcode = "1.1.2"
snafu = "0.6.8"
