[package]
name = "csv2html"
version = "3.1.0"
authors = ["D. Bohdan <dbohdan@dbohdan.com>"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/dbohdan/csv2html"
homepage = "https://github.com/dbohdan/csv2html"
description = "Convert CSV files to HTML tables"
keywords = ["csv"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.2", features = ["cargo"] }
csv = "1.3"
exitcode = "1.1.2"
snafu = "0.8.2"
